<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_memo">

    <Button
        android:id="@+id/button_확인"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/확인"
        android:backgroundTint="#9f9588"
        app:layout_constraintStart_toEndOf="@+id/button_정신장애"
        app:layout_constraintTop_toBottomOf="@+id/button_정신장애" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="장애를 선택하세요."
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#88a6c6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/line2"
        android:background="#88a6c6"
        android:layout_width="300dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"/>

    <RadioButton
        android:id="@+id/button_지체장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/지체장애"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <RadioButton
        android:id="@+id/button_심장장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/심장장애"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <RadioButton
        android:id="@+id/button_뇌병변장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/뇌병변장애"
        app:layout_constraintTop_toBottomOf="@+id/button_지체장애"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        />

    <RadioButton
        android:id="@+id/button_간장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/간장애"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_심장장애" />

    <RadioButton
        android:id="@+id/button_시각장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/시각장애"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button_뇌병변장애" />

    <RadioButton
        android:id="@+id/button_호흡기장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/호흡기장애"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_간장애" />

    <RadioButton
        android:id="@+id/button_청각장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/청각장애"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button_시각장애" />

    <RadioButton
        android:id="@+id/button_장루요루장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/장루요루장애"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_호흡기장애" />

    <RadioButton
        android:id="@+id/button_언어장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/언어장애"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button_청각장애" />

    <RadioButton
        android:id="@+id/button_뇌전증장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/뇌전증장애"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_장루요루장애" />

    <RadioButton
        android:id="@+id/button_안면장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/안면장애"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button_언어장애" />

    <RadioButton
        android:id="@+id/button_신장장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/신장장애"
        app:layout_constraintStart_toStartOf="@+id/button_안면장애"
        app:layout_constraintTop_toBottomOf="@+id/button_안면장애" />

    <RadioButton
        android:id="@+id/button_지적장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/지적장애"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_뇌전증장애" />

    <RadioButton
        android:id="@+id/button_자폐성장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/자폐성장애"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintLeft_toRightOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_지적장애" />

    <RadioButton
        android:id="@+id/button_정신장애"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/정신장애"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button_신장장애" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="200dp" />
</androidx.constraintlayout.widget.ConstraintLayout>