<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">
    <LinearLayout
        android:id="@+id/body"
        android:paddingStart="8dp"
        android:gravity="center|start"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8">

        <TextView
            android:id="@+id/title"
            android:textSize="20sp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/contents"
            android:textSize="15sp"
            android:text="@string/this_is_list_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:paddingEnd="5dp"
        android:layout_width="0dp"
        android:gravity="end|center"
        android:layout_weight="2"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9f9588"
            android:text="@string/지원하기">
        </Button>

    </LinearLayout>
</LinearLayout>